# drawing-to-kcl-to-cad

./: FutureREADME.md
.cursor/skills/notion-prd-to-tdd-plan/: NOTION_MCP_PARAMS.md  NOTION_MCP_SETUP.md  SKILL.md
docs/plans/: NOTION_UI_code_html_summary.md  PLAN_code_html_buttons_and_functions.md  PLAN_ui_code_html_layout_match.md
drawing-to-kcl/: .gitignore  README.md  TESTS.md  run-integration-tests.sh  start.ps1  start.sh
drawing-to-kcl/backend/: __init__.py  main.py  pytest.ini  requirements.txt
drawing-to-kcl/backend/backend/: __init__.py  main.py
drawing-to-kcl/backend/kcl_runtime/: __init__.py  runner.py
drawing-to-kcl/backend/llm/: __init__.py  base.py
drawing-to-kcl/backend/storage/: __init__.py  in_memory.py
drawing-to-kcl/backend/tests/: conftest.py  test_api_endpoints.py  test_integration.py  test_kcl_runtime.py  test_llm_client.py  test_storage.py
drawing-to-kcl/docs/plans/: PLAN_dark_ui_cursor_style.md  PLAN_frontend_test_tdd_unit_tests.md
drawing-to-kcl/frontend/: README.md  demo-features.html  jest.config.cjs  jest.setup.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
drawing-to-kcl/frontend/__tests__/: CommandInput.test.tsx  ImageUpload.test.tsx  KclEditor.test.tsx  KclPreview3D.test.tsx  PanelResizer.test.tsx  artifactGraph.test.ts  astMapping.test.ts  errorHandling.test.tsx  filletEngine.test.ts  geometryRuntime.test.ts  integration.test.tsx  kclEngine.test.ts  layoutPanels.test.tsx  newFeatures.test.ts  page.test.tsx  (+5 more)
drawing-to-kcl/frontend/src-tauri/: Cargo.toml  tauri.conf.json
drawing-to-kcl/frontend/src-tauri/icons/: icon.icns
drawing-to-kcl/frontend/src-tauri/src/: main.rs
drawing-to-kcl/frontend_test/: code.html  index.html  package-lock.json  package.json  run-tests.sh  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
stl-to-cad/: pyproject.toml
stl-to-cad/src/stl_to_cad/: __init__.py  cli.py  config.py  core.py
stl-to-cad/src/stl_to_cad/fitting/: __init__.py  surface_fitter.py
stl-to-cad/src/stl_to_cad/parsers/: __init__.py  stl_parser.py
stl-to-cad/src/stl_to_cad/recognition/: __init__.py  feature_recognizer.py  primitives.py
(+99 files in other folders)
