[package]
name = "forge-3d"
version = "0.1.0"
description = "Forge 3D CAD Editor"
authors = ["Jaewon Hwang"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "forge_3d_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
